Updated the image name and renamed the file

--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="25">
     <tr>
-      <td><img src="images/img1-modified.png" alt="Itachi Uchiha profile picture"></td>
+      <td><img src="img1-modified.png" alt="Itachi Uchiha profile picture"></td>
       <td>
         <h1><strong>Rishabh Panwar</strong></h1>
         <p>Student at <a href="https://www.dituniversity.edu.in/">DIT University</a></p>
