changed the insta and facebook image name

--- a/Index.html
+++ b/Index.html
@@ -52,8 +52,8 @@
     </tr>
   </table>
   <hr>
-  <img src="images/instagram.png" alt="instagram Logo"> &nbsp; &nbsp; &nbsp;
-  <img src="images/facebook.png" alt="Facebook Logo">
+  <img src="instagram.png" alt="instagram Logo"> &nbsp; &nbsp; &nbsp;
+  <img src="facebook.png" alt="Facebook Logo">
   <p><em> <a href="https://www.instagram.com/rish_panwar/">Instagram</a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://www.facebook.com/rishabh.panwar.336/">Facebook</a></em></p>
